Modificaciones para version responsive

--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
       <img src="./fotos/logovalorant.png" alt="logo" class="logoimg">
       <h1 class="Titulo fw-bold">WikiValo</h1>
     </div>
-    <div class="h2 fw-bold border-bottom border-danger">
+    <div class="fw-bold border-danger">
       <nav class="container">
-        <ul class="nav justify-content-center">
-          <li class="nav-item link"><a class=" colorhover1" href="./Index.html">Inicio</a></li>
-          <li class="nav-item link "><a class=" colorhover2" href="./pages/Agentes.html">Agentes</a></li>
-          <li class="nav-item link "><a class=" colorhover2" href="./pages/Armas.html">Armas</a></li>
-          <li class="nav-item link "><a class=" colorhover2" href="./pages/Mapas.html">Mapas</a></li>
-          <li class="nav-item link "><a class=" colorhover2" href="./pages/Noticias.html">Novedades</a></li>
+        <div class="row">
+        <ul>
+          <li class="nav-item link"><button type="button" class="btn btn-outline-danger"><a href="./Index.html">Inicio</a></button> </li>
+          <li class="nav-item link "><button type="button" class="btn btn-outline-danger"><a href="./pages/Agentes.html">Agentes</a></button></li>
+          <li class="nav-item link "><button type="button" class="btn btn-outline-danger"><a href="./pages/Armas.html">Armas</a></button></li>
+          <li class="nav-item link "><button type="button" class="btn btn-outline-danger"><a href="./pages/Mapas.html">Mapas</a></button></li>
+          <li class="nav-item link "><button type="button" class="btn btn-outline-danger"><a href="./pages/Noticias.html">Novedades</a></button></li>
         </ul>
       </nav>
     </div>
+  </div>
   </header>
 
   <main>
@@ -76,20 +78,22 @@
 
     <section class="container">
       <div class="row ">
+        <h2 class="fw-bold colorback ">Noticias de la semana</h2>
         <div class="col-sm-12 col-md-6 ">
-          <h2 class="fw-bold col-md-6 ">Noticias de la semana</h2>
           <a href="./pages/Noticias.html"><img class="img-fluid slide" src="./fotos/valorantnoticias.jpg"
               alt="noticiasvalo"></a>
-        </div>
-        <div class="col-sm-12 col-md-6">
-          <a href="./pages/Noticias.html"><img class="img-fluid slide" src="./fotos/valorantconsolass.png"
-              alt="valoparaconsolas"></a>
         </div>
         <div class="col-sm-12 col-md-6">
           <a href="./pages/Noticias.html"><img class="img-fluid slide" src="./fotos/driftvalorantt.jpg"
               alt="noticiasvalo"></a>
         </div>
         <div class="col-sm-12 col-md-6">
+          <h2 class="fw-bold colorback ">¿Valorant para consolas?</h2>
+          <a href="./pages/Noticias.html"><img class="img-fluid slide" src="./fotos/valorantconsolass.png"
+              alt="valoparaconsolas"></a>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <h2 class="fw-bold colorback ">Nuevo rifle Outlaw</h2>
           <a href="./pages/Noticias.html"><img class="img-fluid slide" src="./fotos/outlawvalorantt.jpg"
               alt="noticiasvalo"></a>
         </div>
@@ -100,7 +104,7 @@
       <div class="row">
         <div>
           <h2 class="fw-bold bg-success p-2 bg-opacity-10">Conoce Valorant</h2>
-          <video class=" videomax border d-block w-100" src="./videos/video-queesvalorant.mp4" controls></video>
+          <video class=" border d-block w-100" src="./videos/video-queesvalorant.mp4" controls></video>
         </div>
       </div>
     </section>
