--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
     <div class="fw-bold border-danger">
       <nav class="container">
         <div class="row">
-        <ul>
-          <li class="nav-item link"><button type="button" class="btn btn-outline-danger"><a href="./Index.html">Inicio</a></button> </li>
-          <li class="nav-item link "><button type="button" class="btn btn-outline-danger"><a href="./pages/Agentes.html">Agentes</a></button></li>
-          <li class="nav-item link "><button type="button" class="btn btn-outline-danger"><a href="./pages/Armas.html">Armas</a></button></li>
-          <li class="nav-item link "><button type="button" class="btn btn-outline-danger"><a href="./pages/Mapas.html">Mapas</a></button></li>
-          <li class="nav-item link "><button type="button" class="btn btn-outline-danger"><a href="./pages/Noticias.html">Novedades</a></button></li>
-        </ul>
+          <ul>
+            <li class="nav-item link"><button type="button" class="btn btn-danger"><a
+                  href="./Index.html">Inicio</a></button> </li>
+            <li class="nav-item link "><button type="button" class="btn btn-danger"><a
+                  href="./pages/Agentes.html">Agentes</a></button></li>
+            <li class="nav-item link "><button type="button" class="btn btn-danger"><a
+                  href="./pages/Armas.html">Armas</a></button></li>
+            <li class="nav-item link "><button type="button" class="btn btn-danger"><a
+                  href="./pages/Mapas.html">Mapas</a></button></li>
+            <li class="nav-item link "><button type="button" class="btn btn-danger"><a
+                  href="./pages/Noticias.html">Novedades</a></button></li>
+          </ul>
       </nav>
     </div>
-  </div>
+    </div>
   </header>
 
   <main>
@@ -46,19 +51,25 @@
               aria-label="Slide 3"></button>
           </div>
           <div class="carousel-inner">
-            <div class="carousel-item active ">
-              <img src="./fotos/valorantmapas.jpg" class="d-block w-100 " alt="imagenagentes">
+            <div class="carousel-item active">
+              <img src="./fotos/valorantmapas.jpg" class="d-block w-100" alt="valomapas">
               <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
               </div>
             </div>
-            <div class="carousel-item ">
-              <img src="./fotos/valorantagentes.jpeg" class="d-block w-100 " alt="imagenagentes">
+            <div class="carousel-item">
+              <img src="./fotos/valorantagentes.jpeg" class="d-block w-100" alt="valoagentes">
               <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
               </div>
             </div>
-            <div class="carousel-item ">
-              <img src="/fotos/valorantarmass.jpg" class="d-block w-100" alt="imagenarmas">
+            <div class="carousel-item">
+              <img src="/fotos/valorantarmass.jpg" class="d-block w-100" alt="valoarmas">
               <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
               </div>
             </div>
           </div>
@@ -73,27 +84,27 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-      </div>
     </section>
-
     <section class="container">
       <div class="row ">
         <h2 class="fw-bold colorback ">Noticias de la semana</h2>
-        <div class="col-sm-12 col-md-6 ">
+        <div class="col-sm-12 col-md-6 col-lg-3 ">
+          <h2 class="fw-bold bg-success p-2 bg-opacity-50">Cambios de PBE</h2>
           <a href="./pages/Noticias.html"><img class="img-fluid slide" src="./fotos/valorantnoticias.jpg"
-              alt="noticiasvalo"></a>
+              alt="noticias"></a>
         </div>
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-6 col-lg-3">
+          <h2 class="fw-bold bg-success p-2 bg-opacity-50 ">Mapa Drift</h2>
           <a href="./pages/Noticias.html"><img class="img-fluid slide" src="./fotos/driftvalorantt.jpg"
               alt="noticiasvalo"></a>
         </div>
-        <div class="col-sm-12 col-md-6">
-          <h2 class="fw-bold colorback ">¿Valorant para consolas?</h2>
+        <div class="col-sm-12 col-md-6 col-lg-3 ">
+          <h2 class="fw-bold bg-success p-2 bg-opacity-50 ">Llega a consolas</h2>
           <a href="./pages/Noticias.html"><img class="img-fluid slide" src="./fotos/valorantconsolass.png"
               alt="valoparaconsolas"></a>
         </div>
-        <div class="col-sm-12 col-md-6">
-          <h2 class="fw-bold colorback ">Nuevo rifle Outlaw</h2>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+          <h2 class="fw-bold bg-success p-2 bg-opacity-50">Nuevo arsenal</h2>
           <a href="./pages/Noticias.html"><img class="img-fluid slide" src="./fotos/outlawvalorantt.jpg"
               alt="noticiasvalo"></a>
         </div>
@@ -103,7 +114,7 @@
     <section class="container">
       <div class="row">
         <div>
-          <h2 class="fw-bold bg-success p-2 bg-opacity-10">Conoce Valorant</h2>
+          <h2 class="fw-bold colorback">Conoce Valorant</h2>
           <video class=" border d-block w-100" src="./videos/video-queesvalorant.mp4" controls></video>
         </div>
       </div>
