--- a/index.html
+++ b/index.html
@@ -53,24 +53,15 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="./fotos/valorantmapas.jpg" class="d-block w-100" alt="valomapas">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-              </div>
+              <div class="carousel-caption d-none d-md-block"></div>
             </div>
             <div class="carousel-item">
               <img src="./fotos/valorantagentes.jpeg" class="d-block w-100" alt="valoagentes">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
+              <div class="carousel-caption d-none d-md-block"></div>
             </div>
             <div class="carousel-item">
               <img src="/fotos/valorantarmass.jpg" class="d-block w-100" alt="valoarmas">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
+              <div class="carousel-caption d-none d-md-block"></div>
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
