--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>WikiValo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="estilos/Style.css">
+  <link rel="stylesheet" href="estilos/style.css">
 
 </head>
 
@@ -23,15 +23,15 @@
         <div class="row">
           <ul>
             <li class="nav-item link"><button type="button" class="btn btn-danger"><a
-                  href="./Index.html">Inicio</a></button> </li>
+                  href="./index.html">Inicio</a></button> </li>
             <li class="nav-item link "><button type="button" class="btn btn-danger"><a
-                  href="./pages/Agentes.html">Agentes</a></button></li>
+                  href="./pages/agentes.html">Agentes</a></button></li>
             <li class="nav-item link "><button type="button" class="btn btn-danger"><a
-                  href="./pages/Armas.html">Armas</a></button></li>
+                  href="./pages/armas.html">Armas</a></button></li>
             <li class="nav-item link "><button type="button" class="btn btn-danger"><a
-                  href="./pages/Mapas.html">Mapas</a></button></li>
+                  href="./pages/mapas.html">Mapas</a></button></li>
             <li class="nav-item link "><button type="button" class="btn btn-danger"><a
-                  href="./pages/Noticias.html">Novedades</a></button></li>
+                  href="./pages/noticias.html">Novedades</a></button></li>
           </ul>
       </nav>
     </div>
