--- a/pages/agentes.html
+++ b/pages/agentes.html
@@ -7,7 +7,7 @@
     <title>WikiValo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilos/Style.css">
+    <link rel="stylesheet" href="../estilos/style.css">
 </head>
 
 <body>
@@ -23,15 +23,15 @@
                 <div class="row ">
                     <ul>
                         <li class="nav-item link "><button type="button" class="btn btn-danger"><a
-                                    href="../Index.html">Inicio</a></button></li>
+                                    href="../index.html">Inicio</a></button></li>
                         <li class="nav-item link"><button type="button" class="btn btn-danger"><a
-                                    href="./Agentes.html">Agentes</a></button></li>
+                                    href="./agentes.html">Agentes</a></button></li>
                         <li class="nav-item link"><button type="button" class="btn btn-danger"><a
-                                    href="./Armas.html">Armas</a></button></li>
+                                    href="./armas.html">Armas</a></button></li>
                         <li class="nav-item link"><button type="button" class="btn btn-danger"><a
-                                    href="./Mapas.html">Mapas</a></button></li>
+                                    href="./mapas.html">Mapas</a></button></li>
                         <li class="nav-item link"><button type="button" class="btn btn-danger"><a
-                                    href="./Noticias.html">Noticias</a></button></li>
+                                    href="./noticias.html">Noticias</a></button></li>
                     </ul>
                 </div>
             </nav>
