nuevas correcciones de mayusculas en archivos

--- a/index.html
+++ b/index.html
@@ -81,22 +81,22 @@
         <h2 class="fw-bold colorback ">Noticias de la semana</h2>
         <div class="col-sm-12 col-md-6 col-lg-3 ">
           <h2 class="fw-bold bg-success p-2 bg-opacity-50">Cambios de PBE</h2>
-          <a href="./pages/Noticias.html"><img class="img-fluid slide" src="./fotos/valorantnoticias.jpg"
+          <a href="./pages/noticias.html"><img class="img-fluid slide" src="./fotos/valorantnoticias.jpg"
               alt="noticias"></a>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
           <h2 class="fw-bold bg-success p-2 bg-opacity-50 ">Mapa Drift</h2>
-          <a href="./pages/Noticias.html"><img class="img-fluid slide" src="./fotos/driftvalorantt.jpg"
+          <a href="./pages/noticias.html"><img class="img-fluid slide" src="./fotos/driftvalorantt.jpg"
               alt="noticiasvalo"></a>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3 ">
           <h2 class="fw-bold bg-success p-2 bg-opacity-50 ">Llega a consolas</h2>
-          <a href="./pages/Noticias.html"><img class="img-fluid slide" src="./fotos/valorantconsolass.png"
+          <a href="./pages/noticias.html"><img class="img-fluid slide" src="./fotos/valorantconsolass.png"
               alt="valoparaconsolas"></a>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
           <h2 class="fw-bold bg-success p-2 bg-opacity-50">Nuevo arsenal</h2>
-          <a href="./pages/Noticias.html"><img class="img-fluid slide" src="./fotos/outlawvalorantt.jpg"
+          <a href="./pages/noticias.html"><img class="img-fluid slide" src="./fotos/outlawvalorantt.jpg"
               alt="noticiasvalo"></a>
         </div>
       </div>
@@ -118,11 +118,11 @@
     </div>
     <section class="container text-center">
       <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger">
-        <a class="btn link colorhover2" href="./Index.html">Inicio</a>
-        <a class="btn link colorhover2" href="./pages/Agentes.html">Agentes</a>
-        <a class="btn link colorhover2" href="./pages/Armas.html">Armas</a>
-        <a class="btn link colorhover2" href="./pages/Mapas.html">Mapas</a>
-        <a class="btn link colorhover2" href="./pages/Noticias.html">Novedades</a>
+        <a class="btn link colorhover2" href="./index.html">Inicio</a>
+        <a class="btn link colorhover2" href="./pages/agentes.html">Agentes</a>
+        <a class="btn link colorhover2" href="./pages/armas.html">Armas</a>
+        <a class="btn link colorhover2" href="./pages/mapas.html">Mapas</a>
+        <a class="btn link colorhover2" href="./pages/noticias.html">Novedades</a>
       </div>
     </section>
 
