--- a/pages/agentes.html
+++ b/pages/agentes.html
@@ -305,11 +305,11 @@
         </div>
         <section>
             <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger ">
-                <a class="btn link colorhover2" href="../Index.html">Inicio</a>
-                <a class="btn link colorhover2" href="./Agentes.html">Agentes</a>
-                <a class="btn link colorhover2" href="./Armas.html">Armas</a>
-                <a class="btn link colorhover2" href="./Mapas.html">Mapas</a>
-                <a class="btn link colorhover2" href="./Noticias.html">Novedades</a>
+                <a class="btn link colorhover2" href="../index.html">Inicio</a>
+                <a class="btn link colorhover2" href="./agentes.html">Agentes</a>
+                <a class="btn link colorhover2" href="./armas.html">Armas</a>
+                <a class="btn link colorhover2" href="./mapas.html">Mapas</a>
+                <a class="btn link colorhover2" href="./noticias.html">Novedades</a>
             </div>
         </section>
         <section>
