--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <div class="carousel-caption d-none d-md-block"></div>
             </div>
             <div class="carousel-item">
-              <img src="/fotos/valorantarmass.jpg" class="d-block w-100" alt="valoarmas">
+              <img src="./fotos/valorantarmass.jpg" class="d-block w-100" alt="valoarmas">
               <div class="carousel-caption d-none d-md-block"></div>
             </div>
           </div>
