--- a/index.html
+++ b/index.html
@@ -50,18 +50,24 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
               aria-label="Slide 3"></button>
           </div>
-          <div class="carousel-inner">
+          <div class="carousel-inner  ">
             <div class="carousel-item active">
-              <img src="./fotos/valorantmapas.jpg" class="d-block w-100" alt="valomapas">
-              <div class="carousel-caption d-none d-md-block"></div>
+              <img src="./fotos/carpuselagentes.png" class="d-block w-100" alt="valoagentes">
+              <div class="carousel-caption d-none d-md-block ">
+                <p class="fw-bold bg-success p-1 bg-opacity-50 ">CONOCE A LOS AGENTES Y SUS HABILIDADES</p>
+              </div>
             </div>
             <div class="carousel-item">
-              <img src="./fotos/valorantagentes.jpeg" class="d-block w-100" alt="valoagentes">
-              <div class="carousel-caption d-none d-md-block"></div>
+              <img src="./fotos/mapascarousel.png" class="d-block w-100" alt="valomapas">
+              <div class="carousel-caption d-none d-md-block">
+                <p class=" fw-bold bg-success p-1 bg-opacity-50 ">TE MOSTRAMOS LOS MEJORES MAPAS</p>
+              </div>
             </div>
             <div class="carousel-item">
-              <img src="./fotos/valorantarmass.jpg" class="d-block w-100" alt="valoarmas">
-              <div class="carousel-caption d-none d-md-block"></div>
+              <img src="./fotos/armascarousel.png" class="d-block w-100 " alt="valoarmas">
+              <div class="carousel-caption d-none d-md-block">
+                <p class="fw-bold bg-success p-1 bg-opacity-50">TODAS LAS ARMAS DE VALORANT Y COMO USARLAS</p>
+              </div>
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
@@ -79,22 +85,22 @@
     <section class="container">
       <div class="row ">
         <h2 class="fw-bold colorback ">Noticias de la semana</h2>
-        <div class="col-sm-12 col-md-6 col-lg-3 ">
+        <div class="col-sm-12 col-md-6 col-lg-6 ">
           <h2 class="fw-bold bg-success p-2 bg-opacity-50">Cambios de PBE</h2>
           <a href="./pages/noticias.html"><img class="img-fluid slide" src="./fotos/valorantnoticias.jpg"
               alt="noticias"></a>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-6">
           <h2 class="fw-bold bg-success p-2 bg-opacity-50 ">Mapa Drift</h2>
           <a href="./pages/noticias.html"><img class="img-fluid slide" src="./fotos/driftvalorantt.jpg"
               alt="noticiasvalo"></a>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3 ">
+        <div class="col-sm-12 col-md-6 col-lg-6 ">
           <h2 class="fw-bold bg-success p-2 bg-opacity-50 ">Llega a consolas</h2>
           <a href="./pages/noticias.html"><img class="img-fluid slide" src="./fotos/valorantconsolass.png"
               alt="valoparaconsolas"></a>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-6">
           <h2 class="fw-bold bg-success p-2 bg-opacity-50">Nuevo arsenal</h2>
           <a href="./pages/noticias.html"><img class="img-fluid slide" src="./fotos/outlawvalorantt.jpg"
               alt="noticiasvalo"></a>
@@ -126,7 +132,7 @@
       </div>
     </section>
 
-    <div class="direccion colorhover2 text-center">
+    <div class="direccion">
       <p class="fw-bold">Creadted by Nicole Bricka @2024 your company. All right reserved.</p>
     </div>
   </footer>
