--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -7,24 +7,36 @@
     <title>WikiValo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilos/Style.css">
+    <link rel="stylesheet" href="../estilos/style.css">
 </head>
 
 <body>
     <header>
-        <h1>WikiValo</h1>
-        <nav>
-            <ul>
-                <li><a href="../Index.html">Inicio</a></li>
-                <li><a href="./Agentes.html">Agentes</a></li>
-                <li><a href="./Armas.html">Armas</a></li>
-                <li><a href="./Mapas.html">Mapas</a></li>
-                <li><a href="./Noticias.html">Noticias</a></li>
-            </ul>
-        </nav>
+        <div class="logoarriba">
+            <img src="../fotos/logovalorant.png" alt="logo" class="logoimg">
+            <h1 class="Titulo fw-bold">WikiValo</h1>
+        </div>
+        <div class="fw-bold border-danger ">
+            <nav class="container">
+                <div class="row ">
+                    <ul>
+                        <li class="nav-item link "><button type="button" class="btn btn-danger"><a
+                                    href="../index.html">Inicio</a></button></li>
+                        <li class="nav-item link"><button type="button" class="btn btn-danger"><a
+                                    href="./agentes.html">Agentes</a></button></li>
+                        <li class="nav-item link"><button type="button" class="btn btn-danger"><a
+                                    href="./armas.html">Armas</a></button></li>
+                        <li class="nav-item link"><button type="button" class="btn btn-danger"><a
+                                    href="./mapas.html">Mapas</a></button></li>
+                        <li class="nav-item link"><button type="button" class="btn btn-danger"><a
+                                    href="./noticias.html">Noticias</a></button></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </header>
     <main>
-        <h2 class="Titulo">NOTICIAS</h2>
+        <h2 class="Titulo distancia fw-bold">NOTICIAS</h2>
         <p>Valorant fue un enorme éxito desde el primer día, un FPS multijugador competitivo que supuso un enorme soplo
             de aire fresco para muchos jugadores. Totalmente situado y establecido, al igual que League of Legends, la
             gallina de los huevos de oro de la compañía, un título que ha sido capaz de llevar los esports a un escalón
@@ -116,15 +128,22 @@
         </section>
     </main>
     <footer>
+        <div class="logoabajo">
+            <img src="../fotos/logovalorant.png" alt="logovalo">
+        </div>
         <section>
-            <a href="../Index.html">Inicio</a>
-            <a href="./Agentes.html">Agentes</a>
-            <a href="./Armas.html">Armas</a>
-            <a href="./Mapas.html">Mapas</a>
-            <a href="./Noticias.html">Noticias</a>
+            <div class="h4 pb-2 mb-4 text-danger border-bottom border-danger ">
+                <a class="btn link colorhover2" href="../index.html">Inicio</a>
+                <a class="btn link colorhover2" href="./agentes.html">Agentes</a>
+                <a class="btn link colorhover2" href="./armas.html">Armas</a>
+                <a class="btn link colorhover2" href="./mapas.html">Mapas</a>
+                <a class="btn link colorhover2" href="./noticias.html">Novedades</a>
+            </div>
         </section>
         <section>
-            <P>creadted by nicole bricka @2024 your company. all right reserved.</P>
+            <div class="direccion">
+                <P class="fw-bold ">Creadted by Nicole Bricka @2024 your company. All right reserved.</P>
+            </div>
         </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
